--- a/style3.css
+++ b/style3.css
@@ -486,3 +486,11 @@
         max-width: 340px;
     }
 }
+.lux-ico i {
+  font-size: 30px;
+  color:#ffa600;
+}
+.why-icon i {
+  font-size: 28px;
+  color:#ffa600;
+}
